k8s/manifests/deployment.yaml
#This is sample deployment file for web application.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app-deployment  #deployment name
  labels:
    app: go-web-app #This is a label that can be used to identify the deployment. It can be the same as the app label in service.yaml, but it doesn't have to be.
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-web-app-pod # This MUST match the template labels below
  template:
    metadata:
      labels:
        app: go-web-app-pod # This MUST match the selector labels above
    spec:
      containers:
        - name: go-web-app-container
          image: myacr121-a8e4crbfcgcaamd5.azurecr.io/go-web-app:v1
          ports:
            - containerPort: 8080 #This MUST match the targetPort in service.yaml
